[package]
name = "twitch-http"
version = "0.1.0"
authors = ["kingbri <bdashore3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket/"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["json"]

[dependencies]
tokio = { version = "0.2", features = ["time"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10.8", features = ["json"] }
